<resources>
    <string name="app_name">Us To You</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="create_account">Create an account</string>
    <string name="sign_up_google">Sign up with Google</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="email">email</string>
    <string name="confirm_pass">confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_account">Already have an account? Login</string>
    <string name="birthday">birthday</string>
    <string name="categories">Categories</string>
    <string name="my_profile">My Profile</string>
    <string name="payment_details">Payment Details</string>
    <string name="my_services">My services</string>
    <string name="my_orders">My Orders</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="price">Price:</string>
    <string name="first_price">10$</string>
    <string name="order_now">Order Now</string>
    <string name="name">Name</string>
    <string name="provider_name">Provider\'s Name</string>
    <string name="parcel_address">Parcel\'s Address</string>
    <string name="place_address">Place Address</string>
    <string name="your_name">Your Name</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="type">Type</string>
    <string name="select_online_or_onsite">Select online or onsite</string>
    <string name="address">Address</string>
    <string name="your_current_address">Your current address</string>
    <string name="date">Date</string>
    <string name="dd_mm_yyyy_hh_mm">DD/MM/YYYY HH:MM</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_card">Credit Card</string>
    <string name="xxxx_xxxx_xxxx_xxxx_xxxx">XXXX-XXXX-XXXX-XXXX-XXXX</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="amount_to_be_paid">Amount to be paid</string>
    <string name="_180">180</string>
    <string name="method">Method</string>
    <string name="cash_payment">Cash payment</string>
    <string name="credit_debit_card_payment">Credit/Debit card payment</string>
    <string name="next">Next</string>
    <string name="your_order_is_confirmed">Your order is confirmed</string>
    <string name="waiting_for_provider_s_approval">Waiting for provider(s) approval</string>
    <string name="place_another_order">Place another order</string>
    <string name="your_payment_is_declined">Your payment is declined</string>
    <string name="retry_payment">Retry payment</string>
    <string name="expiration_date">Expiration date</string>
    <string name="cvc2">CVC2</string>
    <string name="scan">Scan card</string>
    <string name="mmyy">MM/YY</string>
    <string name="child_s_age">Child\'s Age</string>
    <string name="total_0">Total: 0$</string>
    <string name="save">Save</string>
    <string-array name="category_list">
        <item>Therapy</item>
        <item>Babysitting</item>
        <item>Delivery</item>
        <item>Teaching</item>
        <item>IT Support</item>
        <item>Household</item>
        <item>Visual Aid</item>
    </string-array>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="face_to_face">Face to face</string>
    <string name="virtual">Virtual</string>
    <string name="your_description">Your description</string>
    <string name="city">City</string>
    <string name="e_mail">E-mail</string>
    <string name="succesfully_created_service">Succesfully created service!</string>
    <string name="drone">Drone</string>
    <string name="car">Car</string>
    <string name="title">Title</string>
    <string name="service_title">Service title</string>
    <string name="service_price">Service price</string>
    <string name="service_description">Service description</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="surface">Surface</string>
    <string name="availability">Availability</string>
    <string name="av">HH-HH DD/MM/YY</string>
    <string name="quantity">Quantity</string>
    <string name="id">TeamViewer ID</string>
    <string name="passwordT">TeamViewer Password</string>
    <string name="chat_area">Chat area</string>
    <string name="details">Details</string>
    <string name="teacher">Teacher</string>
    <string name="teacher_name">Teacher name</string>
    <string name="payment">Payment</string>
    <string name="access_virtual_lesson">Access Virtual Lesson</string>
    <string name="confirmed">confirmed</string>
    <string name="leave_lesson">Leave lesson</string>
    <string name="rating">Rating</string>
    <string name="content">Content</string>
    <string name="service_quality">Service quality</string>
    <string name="message_the_teacher">Message the teacher</string>
    <string name="virtual_link_expired">Virtual link expired</string>
    <string name="end_call">End call</string>
    <string name="activate_deactivate_microphone">Activate/Deactivate microphone</string>
    <string name="listening">Listening...</string>
    <string name="us_to_you">Us to You</string>
    <string name="assistant">Assistant</string>
    <string name="interface_label">Interface</string>
    <string name="skip">Skip</string>
    <string name="session_type">Session Type</string>
</resources>