<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".teaching.YourTeachingServiceConfirmation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/yourTeachingOrderConfirmationNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/yourTeachingOrderConfirmationNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:inputType="none"
            android:textSize="18sp"
            android:focusable="false"
            android:clickable="false"
            android:hint="@string/your_name"/>

        <TextView
            android:id="@+id/yourTeachingOrderConfirmationPhoneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/yourTeachingOrderConfirmationPhoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:inputType="none"
            android:focusable="false"
            android:clickable="false"
            android:hint="@string/phone_number"/>

        <TextView
            android:id="@+id/yourTeachingOrderConfirmationTypeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/yourTeachingOrderConfirmationTypeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:inputType="none"
            android:focusable="false"
            android:clickable="false"
            android:hint="@string/select_online_or_onsite"/>

        <TextView
            android:id="@+id/yourTeachingOrderConfirmationAddressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/yourTeachingOrderConfirmationAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:focusable="false"
            android:clickable="false"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:hint="@string/your_current_address"/>

        <TextView
            android:id="@+id/yourTeachingOrderConfirmationDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/yourTeachingOrderConfirmationDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:focusable="false"
            android:clickable="false"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:hint="@string/dd_mm_yyyy_hh_mm"/>

        <TextView
            android:id="@+id/yourTeachingOrderConfirmationCreditCardText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_card"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/yourTeachingOrderConfirmationCreditCardEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:focusable="false"
            android:clickable="false"
            android:drawableEnd="@drawable/ic_card_primary"
            android:hint="@string/xxxx_xxxx_xxxx_xxxx_xxxx"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yourTeachingOrderConfirmationBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:onClick="back"
                android:textAllCaps="false"
                android:layout_gravity="start"
                android:background="@drawable/radius_dark_button"
                android:textColor="@color/white"
                android:padding="10dp"
                />

            <Button
                android:id="@+id/yourTeachingOrderConfirmationConfirmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/radius_dark_button"
                android:onClick="order"
                android:padding="10dp"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </FrameLayout>


    </LinearLayout>

</ScrollView>
