<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YourOrderBabysittingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/yourBabysittingOrderNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/yourBabysittingOrderNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:inputType="text"
            android:textSize="18sp"
            android:hint="@string/your_name"/>

        <TextView
            android:id="@+id/yourBabysittingOrderPhoneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/yourBabysittingOrderPhoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:inputType="phone"
            android:hint="@string/phone_number"/>

        <TextView
            android:id="@+id/yourBabysittingOrderAddressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/yourBabysittingOrderAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:hint="@string/your_current_address"/>

        <TextView
            android:id="@+id/yourBabysittingOrderChildAgeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/child_s_age"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/yourBabysittingOrderChildAgeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:hint="@string/child_s_age"
            android:textSize="18sp"
            android:inputType="number"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/yourBabysittingOrderDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/yourBabysittingOrderDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="datetime"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:hint="@string/dd_mm_yyyy_hh_mm"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:onClick="payOrder"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/radius_dark_button"
            android:textColor="@color/white"
            android:padding="10dp"
            />

    </LinearLayout>

</ScrollView>