<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scheduleTherapyDrawerLayout"
    tools:context=".ScheduleTherapySession.ScheduleTherapyDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/primaryDarkColor"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/scheduleTherapyUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/primaryDarkColor"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:inputType="text"
                android:textSize="18sp"
                android:hint="@string/your_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/primaryDarkColor"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/scheduleTherapyUserPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/primaryDarkColor"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:inputType="phone"
                android:hint="@string/phone_number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/primaryDarkColor"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/scheduleTherapyUserAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/primaryDarkColor"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:hint="@string/your_current_address"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/session_type"
                android:textColor="@color/primaryDarkColor"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/scheduleTherapyTypeDropdown"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:drawSelectorOnTop="true"
                android:prompt="@string/category"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/primaryDarkColor"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/scheduleTherapyDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="datetime"
                android:textColor="@color/primaryDarkColor"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:hint="@string/dd_mm_yyyy_hh_mm"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_method"
                android:onClick="payOrder"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/radius_dark_button"
                android:textColor="@color/white"
                android:padding="10dp"
                />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        app:menu="@menu/drawer_menu"
        android:layout_gravity="start"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"/>
</androidx.drawerlayout.widget.DrawerLayout>