<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YourOrderBabysittingConfirmation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/yourBabysittingOrderConfirmationNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/yourBabysittingOrderConfirmationNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:inputType="none"
            android:textSize="18sp"
            android:focusable="false"
            android:clickable="false"
            android:hint="@string/your_name"/>

        <TextView
            android:id="@+id/yourBabysittingOrderConfirmationPhoneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/yourBabysittingOrderConfirmationPhoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:inputType="none"
            android:focusable="false"
            android:clickable="false"
            android:hint="@string/phone_number"/>

        <TextView
            android:id="@+id/yourBabysittingOrderConfirmationAddressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/yourBabysittingOrderConfirmationAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:focusable="false"
            android:clickable="false"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:hint="@string/your_current_address"/>

        <TextView
            android:id="@+id/yourBabysittingOrderConfirmationChildsAgeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/child_s_age"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/yourBabysittingOrderConfirmationChildsAgeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:inputType="none"
            android:focusable="false"
            android:clickable="false"
            android:hint="@string/child_s_age"/>

        <TextView
            android:id="@+id/yourBabysittingOrderConfirmationDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/yourBabysittingOrderConfirmationDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:focusable="false"
            android:clickable="false"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:hint="@string/dd_mm_yyyy_hh_mm"/>

        <TextView
            android:id="@+id/yourBabysittingOrderConfirmationCreditCardText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_card"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/yourBabysittingOrderConfirmationCreditCardEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:focusable="false"
            android:clickable="false"
            android:hint="@string/xxxx_xxxx_xxxx_xxxx_xxxx"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yourBabysittingOrderConfirmationBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:onClick="back"
                android:textAllCaps="false"
                android:layout_gravity="start"
                android:background="@drawable/radius_dark_button"
                android:textColor="@color/white"
                android:padding="10dp"
                />

            <Button
                android:id="@+id/yourBabysittingOrderConfirmationConfirmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/radius_dark_button"
                android:onClick="order"
                android:padding="10dp"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </FrameLayout>


    </LinearLayout>

</ScrollView>